# pdf-secure

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PROVANCE.md  README.md  RELEASE_NOTES_v0.0.1.md  go.mod
.github/workflows/: ci.yml  release.yml  webhook.yml
docs/: engine-contract.md  usage.md
engine/: go.mod  go.sum
engine/cmd/securepdf-engine/: e2e_ack_test.go  e2e_encryption_test.go  e2e_labels_test.go  e2e_test.go  main.go
engine/pkg/consts/: consts.go
engine/pkg/options/: options.go  options_test.go
engine/pkg/pdf/: README.md  ack.go  e2e_pipeline_test.go  encrypt.go  encrypt_test.go  hash.go  hash_test.go  labels.go  labels_test.go  pdf.go  provenance.go  provenance_test.go  tamper.go  tamper_test.go
engine/pkg/policy/: defaults.go  integration_test.go  policy.go  policy_test.go  validate.go  validation_integration_test.go
engine/pkg/receipt/: codes.go  golden_test.go  receipt.go  receipt_test.go
python/: pyproject.toml
python/securepdf/: __init__.py  __main__.py  exception.py  sdk.py
python/securepdf/helpers/: data_class.py
python/securepdf/models/: __init__.py  codes.py  policy.py  receipt.py
python/tests/: test_batch_e2e.py  test_cli_e2e.py  test_exceptions_e2e.py  test_provenance_e2e.py  test_sdk.py
scripts/: README.md  go.mod  test  test-pdfcpu-poc.go  test.py  test_encryption.py  test_provenance.py  verify_foundation.py
scripts/test_cli/: __init__.py
scripts/test_cli/commands/: __init__.py  e2e.py  encryption.py  foundation.py  (+1 more)
scripts/test_lib/: __init__.py  utils.py
(+41 files in other folders)
