[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "securepdf"
version = "0.0.1"
description = "Minimal Python SDK for SecurePDF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.17.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # Line too long (handled by black)
]
