[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-secure"
version = "0.0.1"
description = "Minimal Python SDK for SecurePDF"
readme =  { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.17.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # Line too long (handled by black)
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
securepdf = ["bin/*"]
